examples/test/testpolicy17369.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17369
  namespace: namespace175
spec:
  podSelector:
    matchLabels:
      key33: value24
      key8: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value40
          key7: value33
      podSelector:
        matchLabels:
          key7: value22
